# AiDIY

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  components.json  docker-compose.yml  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  start.sh  vercel.json
kb/: GLM_SETUP.md  README_PIPELINE.md  __init__.py  agent.py  cli.py  config.example.yaml  config.yaml  llm.py  pyproject.toml  test_glm.py  test_rag_simple.py  test_rag_system.py
kb/agents/: __init__.py  base.py  hybrid_agent.py  knowledge_agent.py  router.py  web_search_agent.py
kb/api/: __init__.py  app.py  dependencies.py  ratelimit.py  schemas.py
kb/api/routes/: ask.py  search.py  stream.py
kb/data/cleaned/: docs.jsonl
kb/domain/: __init__.py  chunk.py  document.py
kb/kb/: cli.py  config.py  utils.py
kb/llm/: __init__.py  base.py  factory.py  gemini.py
kb/migrations/: 001_init.sql
kb/pipeline/: __init__.py  chunk.py  clean.py  config.py  incremental.py  index.py  index_signature.py  pipeline.py
kb/rag/: __init__.py  answer_generator.py  context_builder.py  prompts.py  reranker.py  retriever.py
kb/storage/: __init__.py  docstore.py  hybrid_search.py  vectorstore.py
kb/tests/: conftest.py  test_agent.py  test_answer_generator.py  test_api.py  test_api_config.py  test_api_endpoints.py  test_bm25_retriever.py  test_builder.py  test_chunking.py  test_citations.py  test_cli.py  test_config.py  test_config_enhanced.py  test_config_unified.py  test_context_builder.py  test_docstate.py  test_docstore.py  test_document.py  test_e2e.py  test_hybrid_retrieval.py  test_index_signature.py  test_integration.py  test_llama_nodes.py  test_llm.py  test_pipeline.py  test_retriever.py  test_storage.py  test_streaming_jsonl.py  test_vector_dim.py  test_vector_retriever.py  test_vectorstore_gemini.py
kb/tools/: __init__.py  base.py  web_search.py
(+690 files in other folders)
